2005-01-29 Alain Magloire
	Fix for 81403: Move the Code Assist preference page
	out of the CEditor preference page.  It clean the CEditorPreferencePage
	and takes less time to instantiate.
	New checkbox in Code Assist to complete common prefix.
	+ src/org/eclipse/cdt/internal/ui/preferences/AbstracPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/prefernces/CEditorPreferencePage.java
	+ src/org/eclipse/cdt/internal/ui/preferences/CodeAssistPreferencge.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessage.java
	* src/org/eclipse/cdt/internal/ui/text/contentassist/ContentAssistPreference.java
	* src/org/eclipse/cdt/ui/CUIPrefernceInitializer.java
	* plugin.xml
	* plugin.properties

2005-01-28 Alain Magloire
	Add Indexer search in the Source Hover implementation.
	* src/org/eclipse/cdt/intenal/ui/text/CSourceHover.java

2005-01-28 David Inglis

	Implement Eclipse 3.0 Next/Prev Annonation retargetable actions for CEditor with Problems
	view highlighting.
	
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/editor/CDocumentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorActionContributor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties

	+ src/org/eclipse/cdt/internal/ui/editor/GotoAnnotationAction.java

	- icons/full/ctool16/next_error_nav.gif
	- icons/full/ctool16/prev_error_nav.gif
	- icons/full/dtool16/next_error_nav.gif
	- icons/full/dtool16/prev_error_nav.gif
	- icons/full/etool16/next_error_nav.gif
	- icons/full/etool16/prev_error_nav.gif
 	- src/org/eclipse/cdt/internal/ui/editor/GotoErrorAction.java
	
	
2005-01-26 Alain Magloire
	Part of implementing PR 83112
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	Changes in the interface of the Core Model
	* refactor/org/eclipse/cdt/internal/corext/refactoring/rename/RenameElementProcessor.java