@@ -1,3 +1,11 @@
+2005-02-02 Bogdan Gheorghe
+	Added a delete IProblem Markers action to context menu to allow users to manually
+	remove problems reported by the parser during an index.
+	
+	* src/org/eclipse/cdt/internal/ui/util/DeleteIProblemMarkerAction.java
+	* plugin.xml
+	* plugin.properties
+	
 2005-01-29 Alain Magloire
 	Fix for 81403: Move the Code Assist preference page
 	out of the CEditor preference page.  It clean the CEditorPreferencePage
